XP-4193 Enable help text inside an item set * Fixed the main help toggle icon no longer working * Fixed the main help toggle icon not toggling help text inside item sets * Fixed it so that help text for a new form item will be turned on if the main help toggle icon is on * Fixed long step navigator wrapping to the second line because of the help text icon

--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/form-common.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/form-common.less
@@ -125,7 +125,7 @@
     padding-top: 2px;
 
     &:not(.visible) {
-      visibility: hidden;
+      display: none;
     }
 
     p {
